updated rps with UI

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin - Rock Paper Scissors</title>
+
+    <!-- styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <h1>Odin - Rock Paper Scissors</h1>
+    <h1 id="title">Rock Paper Scissors</h1>
+
+    <div id="buttons">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+
+    <div id="results">
+      <p id="roundResult"></p>
+      <p id="score"></p>
+      <p id="winner"></p>
+    </div>
 
     <!-- scripts -->
     <script src="./scripts/script.js"></script>
